<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.mendirl</groupId>
        <artifactId>dependencies-common</artifactId>
        <version>1.3.0</version>
        <relativePath>../dependencies-common</relativePath>
    </parent>

    <artifactId>dependencies-quarkus</artifactId>

    <packaging>pom</packaging>

    <properties>
        <!-- https://mvnrepository.com/artifact/io.quarkus/quarkus-universe-bom -->
        <!-- https://mvnrepository.com/artifact/io.quarkus/quarkus-maven-plugin -->
        <quarkus.version>1.8.3.Final</quarkus.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-universe-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <!-- https://quarkus.io/guides/maven-tooling -->
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>
                            <arg>--enable-preview</arg>
                        </compilerArgs>
                        <jvmArgs>--enable-preview</jvmArgs>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>build</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>docker</id>
            <properties>
                <quarkus.container-image.build>true</quarkus.container-image.build>
                <quarkus.container-image.registry>${docker.registry.url}</quarkus.container-image.registry>
                <quarkus.container-image.group>${docker.owner}/${docker.repository}</quarkus.container-image.group>
                <quarkus.container-image.name>${docker.image.name}</quarkus.container-image.name>
                <quarkus.container-image.tag>${docker.image.version}</quarkus.container-image.tag>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-container-image-docker</artifactId>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>dockerPush</id>
            <properties>
                <quarkus.container-image.build>true</quarkus.container-image.build>
                <quarkus.container-image.push>true</quarkus.container-image.push>
                <quarkus.container-image.registry>${docker.registry.url}</quarkus.container-image.registry>
                <quarkus.container-image.username>${docker.registry.username}</quarkus.container-image.username>
                <quarkus.container-image.password>${docker.registry.password}</quarkus.container-image.password>
                <quarkus.container-image.group>${docker.owner}/${docker.repository}</quarkus.container-image.group>
                <quarkus.container-image.name>${docker.image.name}</quarkus.container-image.name>
                <quarkus.container-image.tag>${docker.image.version}</quarkus.container-image.tag>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-container-image-docker</artifactId>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>native</id>
            <properties>
                <java.version>11</java.version>
                <quarkus.package.type>native</quarkus.package.type>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                                <configuration>
                                    <systemPropertyVariables>
                                        <native.image.path>
                                            ${project.build.directory}/${project.build.finalName}-native-runner
                                        </native.image.path>
                                        <java.util.logging.manager>
                                            org.jboss.logmanager.LogManager
                                        </java.util.logging.manager>
                                        <maven.home>${maven.home}</maven.home>
                                    </systemPropertyVariables>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
